[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/FIGHTMODE/C_Victory/VictoryScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Theme_BigGothic.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/FIGHTMODE/C_Victory/prompt_no.png" type="Texture" id=3]
[ext_resource path="res://Assets/Mouse/Mouse_Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/FIGHTMODE/C_Victory/Resources/SynthesePanel/Synthese_Panel.tscn" type="PackedScene" id=5]

[node name="VictoryScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Label_Victory" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 448.0
margin_right = 960.0
margin_bottom = 128.0
theme = ExtResource( 2 )
text = "Victory"
align = 1
valign = 1

[node name="Button_ReturnMenu" type="Button" parent="."]
margin_left = 1280.0
margin_top = 64.0
margin_right = 1344.0
margin_bottom = 128.0
icon = ExtResource( 3 )

[node name="Mouse_Cursor" parent="." instance=ExtResource( 4 )]
z_index = 50

[node name="Table_Player1" parent="." instance=ExtResource( 5 )]
margin_left = 64.0
margin_top = 128.0
margin_right = 576.0
margin_bottom = 736.0

[node name="Table_Player2" parent="." instance=ExtResource( 5 )]
margin_left = 736.0
margin_top = 128.0
margin_right = 1248.0
margin_bottom = 736.0
